[package]
name = "edge-tts-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository ="https://github.com/GaN601/edge-tts-rs"
description ="Provide simple packaging for edge tts services"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.5"
uuid = { version = "1.4.1", features = ["v4","fast-rng","macro-diagnostics"] }