[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2" ,features = ["full"]}
edge-tts-rs = {path = "../edge-tts-rs"}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
chrono = "0.4.31"
[[example]]
name = "hello_world"
path = "hello_world.rs"
[[example]]
path="send_custom_ssml.rs"
name="send_custom_ssml"
